fix: minor changes

--- a/public/style/base.css
+++ b/public/style/base.css
@@ -3,7 +3,7 @@
 :root {
   --padding-bottom-desktop: 80px;
   --padding-bottom-mobile: 120px;
-  --primary-color: #1edd1e;
+  --primary-color: #0dbf18;
   --highlight-color: #BF00FF;
   --font-family-mono: 'Victor Mono', monospace;
 }
