--- a/public/css/components/slide-content.css
+++ b/public/css/components/slide-content.css
@@ -4,8 +4,8 @@
   padding-bottom: 120px;
   width: 100%;
   padding: 0 clamp(1em, 3vw, 5em) 100px;
-  font-size: clamp(1rem, 1vw, 1.3rem);
-  line-height: 1.4;
+  font-size: clamp(1.2rem, 1.1vw, 1.5rem);
+  line-height: 1.5;
   transition: opacity 1s ease;
 }
 
@@ -24,7 +24,9 @@
 }
 
 .slide-content .header h1 {
-  margin-top: 1.5em;
+  margin-top: 1em;
+  margin-bottom: 0.2em;
+  font-size: clamp(2.5em, 3.5vw, 3rem);
 }
 
 .slide-content .body {
@@ -36,8 +38,7 @@
 
 .slide-content .text {
   flex: 3;
-  min-width: 300px;
-  line-height: 2;
+  min-width: 350px;
   padding: 1em;
 }
 
@@ -53,7 +54,26 @@
   width: auto;
   height: auto;
   object-fit: contain;
-  border: 3px solid #1edd1e;
+  border: 2px solid #FFD600;
+}
+
+@media screen and (min-width: 2500px) and (max-width: 2650px) and (min-height: 1350px) and (max-height: 1500px) {
+  #slide-container {
+    font-size: 1.8rem;
+    line-height: 2.2;
+  }
+
+  .slide-content .header h1 {
+    font-size: 4.5rem;
+  }
+
+  .year-slide .year-heading {
+    font-size: 12rem;
+  }
+
+  .year-slide .year-subtitle {
+    font-size: 4rem;
+  }
 }
 
 /* Mobile styles */
